[project]
name = "ev-hackathon"
version = "0.1.0"
description = ""
authors = [
    {name = "ppatilsahaj",email = "ppatilsahaj@tatamotors.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "google-adk (>=1.5.0,<2.0.0)",
    "adk (>=0.0.5,<0.0.6)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
